--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "react-coder-app",
+  "name": "coderhouse",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.1",
+    "@uiball/loaders": "^1.2.6",
+    "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
